Docker and VSCode compatible

--- a/src/cls/State.cls
+++ b/src/cls/State.cls
@@ -23,4 +23,34 @@ Index PostalAbbrIndex On PostalAbbr [ Unique ];
 /// Index on state capital
 Index CapitalIndex On Capital [ Unique ];
 
+Storage Default
+{
+<Data name="StateDefaultData">
+<Value name="1">
+<Value>%%CLASSNAME</Value>
+</Value>
+<Value name="2">
+<Value>Name</Value>
+</Value>
+<Value name="3">
+<Value>PostalAbbr</Value>
+</Value>
+<Value name="4">
+<Value>Capital</Value>
+</Value>
+<Value name="5">
+<Value>Established</Value>
+</Value>
+<Value name="6">
+<Value>Area</Value>
+</Value>
+</Data>
+<DataLocation>^FirstLook.StateD</DataLocation>
+<DefaultData>StateDefaultData</DefaultData>
+<IdLocation>^FirstLook.StateD</IdLocation>
+<IndexLocation>^FirstLook.StateI</IndexLocation>
+<StreamLocation>^FirstLook.StateS</StreamLocation>
+<Type>%Storage.Persistent</Type>
+}
+
 }
